force-app/main/default/objects/custom_create357__c/custom_create357__c.object-meta.xml
<CustomObject>
    <label>Custom created object357</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects357</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>