force-app/main/default/objects/custom_create357__c/fields/custom_create_357field541__c.field-meta.xml
<CustomField>
    <fullName>custom_create_357field541__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 357field541</label>
    <type>Checkbox</type>
</CustomField>